objects/pca__Business__c.object
<CustomObject>
    <description>Custom business fields which Postcode Anywhere should integrate with</description>
    <fields>
        <fullName>pca__Ceo_Field__c</fullName>
        <label>Ceo Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Ceo_Forename_Field__c</fullName>
        <label>Ceo Forename Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Ceo_Surname_Field__c</fullName>
        <label>Ceo Surname Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Ceo_Title_Field__c</fullName>
        <label>Ceo Title Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__City_Field__c</fullName>
        <label>City Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Company_Name_Field__c</fullName>
        <label>Company Name Field</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Country_Field__c</fullName>
        <label>Country Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__DUNS_Field__c</fullName>
        <label>DUNS Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Domestic_Ultimate_Company_Name_Field__c</fullName>
        <label>Domestic Ultimate Company Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Domestic_Ultimate_DUNS_Field__c</fullName>
        <label>Domestic Ultimate DUNS Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Fax_Field__c</fullName>
        <label>Fax Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Global_Ultimate_Company_Name_Field__c</fullName>
        <label>Global Ultimate Company Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Global_Ultimate_Country_Name_Field__c</fullName>
        <label>Global Ultimate Country Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Global_Ultimate_DUNS_Field__c</fullName>
        <label>Global Ultimate DUNS Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Location_Type_Field__c</fullName>
        <label>Location Type Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Naics_Code_Field__c</fullName>
        <label>Naics Code Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Naics_Description_Field__c</fullName>
        <label>Naics Description Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Parent_Company_Name_Field__c</fullName>
        <label>Parent Company Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Parent_DUNS_Field__c</fullName>
        <label>Parent DUNS Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Phone_Field__c</fullName>
        <label>Phone Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Postalcode_Field__c</fullName>
        <label>Postalcode Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__SIC_Code_Field__c</fullName>
        <label>SIC Code Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__SIC_Description_Field__c</fullName>
        <label>SIC Description Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Sales_Field__c</fullName>
        <label>Sales Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Sales_Range_Field__c</fullName>
        <label>Sales Range Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Setting__c</fullName>
        <label>Setting</label>
        <referenceTo>pca__Setting__c</referenceTo>
        <relationshipName>Businesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pca__Site_Employees_Field__c</fullName>
        <label>Site Employees Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__State_Field__c</fullName>
        <label>State Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Street_Field__c</fullName>
        <label>Street Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Total_Employees_Field__c</fullName>
        <label>Total Employees Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Use_Address_Integrations__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this option to let the address integrations handle the addresses. This will make all address fields already on the page available.</inlineHelpText>
        <label>Use Address Integrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pca__Year_Started_Field__c</fullName>
        <label>Year Started Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Business Integration</label>
    <nameField>
        <label>Business Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>